lab1/Test/L1-A-0-57.output
Error Type A at Line 8
Error Type A at Line 9
Error Type A at Line 11
Error Type A at Line 13
Error Type A at Line 13
