lab1/Test/L1-A-0-57.cmm
float Fag ( float P , float TeFPyGaaA2D , int lF_zreB6M5S 
  ) {
  if ( W )   QwN64F ;
else   Wgjm4zZqcPIHW30hOT3 ;

}
float ;
int kwwV4ZSs ( float #KCLTqwYRZqNyP2s ) {
  float RF8Kzp5_qd3qBJC7AQ $;
}
int lySoJ0qQpB8Qb2 ( ^) {
}
&$